# ma495-hw5

./: .gitignore  CMakeLists.txt  heat.html  main.cpp  parks.json
